<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DJ-DRMR</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="action_example">Search</string>
    <string name="animation">Splash Screen Animation</string>
    <string name="welcome_txt">Welcome&#33;</string>
    <string name="genreListLabel">Choose a genre&#58;</string>
    
    <!-- Navigation Drawer -->
    <string name="title_section1">Welcome</string>
    <string name="title_section2">Browse</string>
    <string name="title_section3">Record</string>
    <string name="title_section4">Upload</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
    <!-- For logo/title header -->
    <string name="DJ">DJ</string>
    <string name="DRMR">DRMR</string>
    
    
    <!-- login and sign up strings -->
    <string name="read_comments">Read Comments</string>
    <string name="button_label">Login</string>
    <string name="text_user_prompt">Username&#58;</string>
    <string name="text_pw_prompt">Password&#58;</string>
    <string name="radlistener">Rad Listener</string>
    <string name="signup">Register&#33;</string>
    <string name="login">Login</string>
    <string name="radArtist">Rad Artist</string>
    <string name="regpage">Registration Page</string>
    <string name="logpage">Login Page</string>
    <string name="submit">Submit</string>
    <string name="success">Success&#33;</string>
    <string name="email_prompt">Enter your email address&#58;</string>
    <string name="username">Please enter username (email that was registered)</string>
    <string name="enterusername">Enter username (email that was registered)</string>
    <string name="WebViewActivity">Web View Activity</string>

    <!-- Browse SoundCloud strings -->
    <string name="browse">Browse</string>
    <string name="browseSound">Browse SoundCloud</string>
    <string name="example">Example application</string>
    <string name="search">Search</string>
    <string name="search_terms">what do you want to hear?</string>
    <string name="search_by_artist">search by Soundcloud user</string>
    <string name="search_by_keyword">search by keyword</string>
    <string name="empty_search">No search terms specified</string>
    
    <!-- soundcloud utility strings -->
    <string name="client_id">0724aaed3681642b2c352cea90e79297</string>
    <string name="client_secret">b18ec752d35fce1a99169a2120698bad</string>

    <!-- Record Activity -->
    <string name="record_record">Record</string>
    <string name="record_stop">Stop</string>
    <string name="record_play">Play</string>
    <string name="record_save">Save</string>
    <string name="record_artist">Artist</string>
    <string name="record_title">Title</string>
    <string name="record_album">Album</string>
    <string name="record_comment">Comment</string>
    <string name="record_year">Year</string>
    <string name="record_cancel">Cancel</string>
    
    <!-- Upload Activity -->
    <string name="title_activity_upload">UploadActivity</string>
    <string name="upload">Upload</string>
	<string name="btnUpload">Choose File</string>
	<string name="txtFileChose">No file chosen</string>
	<string name="tags">TAGS</string>
	<string name="newName">New Name</string>
	
	<!--  key strings -->
    <string name="shared_prefs">edu.uco.sdd.spring15.dj_drmr.SHARED_PREFERENCES</string>
    <string name="token_name">edu.uco.sdd.spring15.dj_drmr.OAUTH_TOKEN</string>
    <string name="is_logged_out">edu.uco.sdd.spring15.dj_drmr.IS_LOGGED_OUT</string>
    
    <!-- about -->
    <string name="about_blurb">
        DJ DRMR was developed by students at the University of Central Oklahoma to fulfill the requirements
        of the capstone Software Design and Development course.\n\n
        \u00A92015\n\n
        D ebra Hogue\n
        J ustin Tilley\n
        D onghan Lee\n
        R aymon Burden\n
        M elicent King\n
        R enan Martins Kuba
    </string>
	
	<!--  SoundCloud Genres -->
	<string-array name="soundcloud_genres">
	    <item>Alternative Rock</item>
	    <item>Ambient</item>
	    <item>Classical</item>
	    <item>Country</item>
	    <item>Dance &amp; EDM</item>
	    <item>Dancehall</item>
	    <item>Deep House</item>
	    <item>Disco</item>
	    <item>Drum &amp; Bass</item>
	    <item>Dubstep</item>
	    <item>Electronic</item>
	    <item>Folk &amp; Singer-Songwriter</item>
	    <item>Hip Hop &amp; Rap</item>
	    <item>House</item>
	    <item>Indie</item>
	    <item>Jazz &amp; Blues</item>
	    <item>Latin</item>
	    <item>Metal</item>
	    <item>Piano</item>
	    <item>Pop</item>
	    <item>R&amp;B &amp; Soul</item>
	    <item>Reggae</item>
	    <item>Reggaeton</item>
	    <item>Rock</item>
	    <item>Soundtrack</item>
	    <item>Techno</item>
	    <item>Trance</item>
	    <item>Trap</item>
	    <item>Trip Hop</item>
	    <item>World</item>
	</string-array>
</resources>
