<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/record_info_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
        android:hint="@string/record_artist"
        android:inputType="text" />
    <EditText
        android:id="@+id/record_info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
        android:hint="@string/record_title"
        android:inputType="text" />
    <EditText
        android:id="@+id/record_info_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
        android:hint="@string/record_album"
        android:inputType="text" />
    <EditText
        android:id="@+id/record_info_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
        android:hint="@string/record_comment"
        android:inputType="text" />
    <EditText
        android:id="@+id/record_info_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
        android:hint="@string/record_year"
        android:inputType="number" 
        android:imeOptions="actionDone" />


</LinearLayout>