<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:layout_gravity="center" >

    <LinearLayout
	    android:id="@+id/title"
	    android:background="@drawable/border"
	    android:layout_centerHorizontal="true"
	    android:padding="10dp"
	    android:layout_height="wrap_content"
	    android:layout_width="240dp"
	    android:layout_marginTop="25dp"
	    android:layout_marginBottom="25dp"
	    android:orientation="horizontal">
	        
		<TextView
			android:id="@+id/text01"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:textSize="20pt"
			android:textStyle="bold"
			android:textColor="#DAA520"
			android:background="@android:color/transparent"
			android:text="@string/DJ" />
		    
		<ImageView 
			android:id="@+id/logo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/app_name"
			android:background="@android:color/transparent"
			android:src="@drawable/ic_launcher"/>
		    
		<TextView
			android:id="@+id/text02"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:textSize="20pt"
			android:textStyle="bold"
			android:textColor="#DAA520"
			android:background="@android:color/transparent"
			android:text="@string/DRMR" />
		    
	</LinearLayout>    
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_centerVertical="true"
        android:text="@string/text_user_prompt" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/username"
        android:text="@string/text_pw_prompt" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView01"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/password"
        android:layout_below="@+id/password"
        android:text="@string/signup" />

</RelativeLayout>