<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btn_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="15dp"
        android:layout_marginTop="35dp"
        android:layout_toLeftOf="@+id/btn_play"
        android:text="@string/record_record" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_record"
        android:layout_alignBottom="@+id/btn_record"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:text="@string/record_play" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_play"
        android:layout_alignBottom="@+id/btn_play"
        android:layout_marginLeft="28dp"
        android:layout_toRightOf="@+id/btn_play"
        android:text="@string/record_save" />

</RelativeLayout>
