<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:layout_gravity="center"
    tools:context="edu.uco.sdd.spring15.dj_drmr.DjdrmrMain$UploadFragment" >

    <LinearLayout
	    android:id="@+id/title"
	    android:background="@drawable/border"
	    android:layout_marginTop="20sp"
	    android:padding="10dp"
	    android:layout_height="80dp"
	    android:layout_width="240dp"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="25dp"
	    android:orientation="horizontal" >
		    
		<ImageView
		    android:id="@+id/logo"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:background="@android:color/transparent"
		    android:layout_gravity="center"
		    android:contentDescription="@string/app_name"
		    android:src="@drawable/title" />
		    
	</LinearLayout>
	
    <TextView 
        android:id="@+id/txtFileChose"
        android:layout_below="@id/title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/txtFileChose"
        android:textSize="10pt"
        android:textStyle="bold"
        android:textColor="#DAA520"
        android:background="@android:color/transparent"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25sp"
        android:layout_below="@id/txtFileChose"
        android:background="@drawable/custom_btn"
        android:gravity="center"
        android:padding="10dp"
        android:shadowColor="#0000CD"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="0.6"
        android:text="@string/btnUpload"
        android:textColor="#DAA520"
        android:textSize="10pt"
        android:textStyle="bold" />
    
     <EditText 
        android:id="@+id/newName"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnUpload"
        android:textSize="10pt"
        android:textStyle="bold"
        android:textColor="#DAA520"
        android:hint="@string/newName"
        />
    
    <EditText 
        android:id="@+id/editTextTags"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_below="@id/newName"
        android:hint="@string/tags"
        android:textColor="#DAA520"
        android:inputType="text"
        />
    
    <Button 
        android:id="@+id/uploadBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/upload"
        android:layout_below="@id/editTextTags"
        android:background="@drawable/custom_btn"
        android:gravity="center"
        android:padding="10dp"
        android:shadowColor="#0000CD"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="0.6"
        android:textColor="#DAA520"
        android:textSize="10pt"
        android:textStyle="bold" />

</RelativeLayout>
