<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:layout_gravity="center"
    tools:context="edu.uco.sdd.spring15.dj_drmr.DjdrmrMain" >

    <LinearLayout
        android:id="@+id/title"
        android:background="@drawable/border"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
        
	    <TextView
	        android:id="@+id/text01"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20pt"
	        android:textStyle="bold"
	        android:textColor="#DAA520"
	        android:background="@android:color/transparent"
	        android:text="@string/DJ" />
	    
	    <ImageView 
	        android:id="@+id/logo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/app_name"
	        android:background="@android:color/transparent"
	        android:src="@drawable/ic_launcher"/>
	    
	    <TextView
	        android:id="@+id/text02"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:textSize="20pt"
	        android:textStyle="bold"
	        android:textColor="#DAA520"
	        android:background="@android:color/transparent"
	        android:text="@string/DRMR" />
    
    </LinearLayout>
    
    <Button
        android:id="@+id/btnBrowse"
        android:layout_below="@id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/browseSound"
        android:textSize="10pt"
		android:textStyle="bold"
		android:textColor="#DAA520"
		android:gravity="center"
		android:shadowColor="#0000CD"
		android:shadowDx="1"
		android:shadowDy="1"
		android:shadowRadius="0.6"
		android:background="@drawable/custom_btn"
		android:padding="10dp"
		android:layout_centerHorizontal="true" />
        

</RelativeLayout>
