<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
	    android:id="@+id/title"
	    android:background="@drawable/border"
	    android:padding="10dp"
	    android:layout_height="80dp"
	    android:layout_width="240dp"
	    android:layout_gravity="center"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="25dp"
	    android:layout_marginBottom="25dp"
	    android:orientation="horizontal">
		    
		<ImageView
		    android:id="@+id/logo"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:background="@android:color/transparent"
		    android:layout_gravity="center"
		    android:contentDescription="@string/app_name"
		    android:src="@drawable/title" />
		    
	</LinearLayout>

    <TextView
        android:id="@+id/txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:textSize="10pt"
		android:textStyle="bold"
		android:textColor="#DAA520"
        android:text="@string/text_user_prompt" />
    
    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_username"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:textSize="10pt"
		android:textStyle="bold"
		android:textColor="#DAA520"
        android:inputType="text" />

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:layout_marginLeft="22dp"
        android:textSize="10pt"
		android:textStyle="bold"
		android:textColor="#DAA520"
        android:text="@string/text_pw_prompt" />
    
    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_password"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:textSize="10pt"
		android:textStyle="bold"
		android:textColor="#DAA520"
        android:inputType="textPassword" />  

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:textSize="10pt"
		android:textStyle="bold"
		android:textColor="#DAA520"
		android:gravity="center"
		android:shadowColor="#0000CD"
		android:shadowDx="1"
		android:shadowDy="1"
		android:shadowRadius="0.6"
		android:background="@drawable/custom_btn"
        android:text="@string/button_label" />
        
    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:padding="10dp"
        android:textSize="10pt"
		android:textStyle="bold"
		android:textColor="#DAA520"
		android:gravity="center"
		android:shadowColor="#0000CD"
		android:shadowDx="1"
		android:shadowDy="1"
		android:shadowRadius="0.6"
		android:background="@drawable/custom_btn"
        android:text="@string/signup" />


</RelativeLayout>