<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:layout_gravity="center" >
    
	<LinearLayout
        android:id="@+id/browse_menu"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="15dp"
        android:layout_centerHorizontal="true" >
    
	    <LinearLayout
		    android:id="@+id/title"
		    android:background="@drawable/border"
		    android:padding="10dp"
		    android:layout_height="wrap_content"
		    android:layout_width="240dp"
		    android:layout_marginBottom="25dp"
		    android:orientation="horizontal">
		        
			<TextView
				android:id="@+id/text01"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:textSize="20pt"
				android:textStyle="bold"
				android:textColor="#DAA520"
				android:background="@android:color/transparent"
				android:text="@string/DJ" />
			    
			<ImageView 
				android:id="@+id/logo"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:contentDescription="@string/app_name"
				android:background="@android:color/transparent"
				android:src="@drawable/ic_launcher"/>
			    
			<TextView
				android:id="@+id/text02"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="20pt"
				android:textStyle="bold"
				android:textColor="#DAA520"
				android:background="@android:color/transparent"
				android:text="@string/DRMR" />
			    
		</LinearLayout>
 
	    <LinearLayout
	        android:id="@+id/browse_tray"
	        android:background="@drawable/border"
	        android:padding="15dp"
	        android:layout_marginTop="100dp"
	        android:orientation="vertical"
	        android:layout_width="240dp"
	        android:layout_height="wrap_content" >
			
		    <ToggleButton
		            android:id="@+id/btnPlayPause"
		            android:background="@drawable/custom_btn"
		            android:layout_width="208dp" 
		            android:layout_height="50dp"
		            android:textSize="10pt"
					android:textStyle="bold"
					android:textColor="#DAA520"
					android:gravity="center"
					android:shadowColor="#0000CD"
					android:shadowDx="1"
					android:shadowDy="1"
					android:shadowRadius="0.6" />
		    
		    <TextView
		        android:id="@+id/txtData"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/hello_world" />
		    
		</LinearLayout>
		
    </LinearLayout>
 
</RelativeLayout>